--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.7'
 services:
   app:
     build:
@@ -6,9 +5,12 @@ services:
       dockerfile: docker/Dockerfile
     ports:
       - "80:80"
+    env_file:
+      - .env
     networks:
       - bookcase-network
 
 networks:
   bookcase-network:
-    external: true
+    external:
+      name: bookcase-network
