[FEATURE][BCA-1] Fix tests and add junie

--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,12 @@
               "src/styles.css"
             ],
             "scripts": []
+          },
+          "configurations": {
+            "ci": {
+              "browsers": "ChromeHeadless",
+              "watch": false
+            }
           }
         }
       }
