--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,13 @@
 # Stage 1 - Building
-FROM node:20.13.1 AS builder
+# Use Node 22 LTS per Angular 20 support matrix
+FROM node:22.19.0 AS builder
 WORKDIR /app
 COPY ./package*.json ./
-RUN npm install
+# Prefer reproducible installs in CI/containers
+RUN npm ci || npm install
 COPY ./ .
-RUN npm run build --prod
+# Angular 20 defaults to production build; --prod is deprecated
+RUN npm run build
 
 # Stage 2 - Deploying
 FROM nginx:1.19.6-alpine
